@@ -23,6 +23,7 @@ version 0.10.0:
 	* Added GNOME Url Handler as an available web-browser 
 	* Added the S html tag. 		
 	* Optionally Ignore TiK's Automated Messages
+	* Option to beep instead of play sound
 
 version 0.9.20 (07/14/2000):
 	* More plugin events, more plugin features
